<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".MedicineFragment">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/back_button_background"
        android:backgroundTint="?color"
        app:tint="?backgroundColor"
        android:elevation="1dp"
        android:paddingStart="-5dp"
        android:paddingEnd="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/medicine_reminder_small"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonBack"
        app:layout_constraintTop_toTopOf="@+id/imageButtonBack" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/editTextMedicine"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/medicine_name_small"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDosage"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/dosage"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMedicine" />

        <EditText
            android:id="@+id/editTextHour"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hour"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDosage" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twoDot"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextHour"
            app:layout_constraintEnd_toStartOf="@+id/editTextMinute"
            app:layout_constraintStart_toEndOf="@+id/editTextHour"
            app:layout_constraintTop_toTopOf="@+id/editTextHour" />

        <EditText
            android:id="@+id/editTextMinute"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/minute"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.911"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDosage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textColor="?backgroundColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextHour" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>